# HCP-digital-campaign-agents

./: README.md  main.py  pyproject.toml
data/: 10_HCP_Sample_Data_Digital_Cpgn_Act.csv
infra/: app.py  hcp_campaign_stack.py
scripts/: hcp_campaign_query_agent.py  neptune_data_loader.py  verify_data_load.py
scripts/model-training/: 1.data_export.py  2.data_prepation_for_training.py  3.sm_training.py  4.deploy_model.py  5.cleanup_endpoint.py
scripts/model-training/sm/: inference.py  requirements.txt  train_dgl_lp.py
